Fix fuzzy sort issue and queries refactor